# OpenCV-Homework

./: CMakeLists.txt  FirstTaskReport.md  main.cpp
FirstTask/: FirstTask.cpp  FirstTask.h
Task1/: Report.md  main.cpp
Task2/: Report.md  main.cpp
Task3/: Report.md  main.cpp
Task4/: Report.md  main.cpp
Task5/: CMakeLists.txt  Report.md  main.cpp
